--- a/application/index/view/layouts/layout1.html
+++ b/application/index/view/layouts/layout1.html
@@ -101,26 +101,19 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle bg clear" data-toggle="dropdown">
                       <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                        <img src="__STATIC__/index/images/a0.png" alt="...">
+                        <img src="__STATIC__/{$curUserInfo.avatar}" alt="...">
                       </span>
-                        John.Smith <b class="caret"></b>
+                        {$curUserInfo.name} <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight">
                         <li>
-                            <span class="arrow top"></span>
-                            <a href="#">Settings</a>
-                        </li>
-                        <li>
-                            <a href="profile.html">Profile</a>
+                            <a href="profile.html">个人中心</a>
                         </li>
                         <li>
                             <a href="#">
                                 <span class="badge bg-danger pull-right">3</span>
-                                Notifications
+                                消息
                             </a>
-                        </li>
-                        <li>
-                            <a href="docs.html">Help</a>
                         </li>
                         <li class="divider"></li>
                         <li>
