--- a/application/index/view/layouts/layout1.html
+++ b/application/index/view/layouts/layout1.html
@@ -107,7 +107,7 @@
                     </a>
                     <ul class="dropdown-menu animated fadeInRight">
                         <li>
-                            <a href="profile.html">个人中心</a>
+                            <a href="{:url('index/student')}">个人中心</a>
                         </li>
                         <li>
                             <a href="#">
