--- a/application/index/view/student/index.html
+++ b/application/index/view/student/index.html
@@ -1,8 +1,10 @@
+{layout name="layouts/studentlayout" /}
 <style>
-    .page_items .pagination{
+    .page_items .pagination {
         display: inline-flex;
     }
-    .page_items .pagination .page-item .page-link{
+
+    .page_items .pagination .page-item .page-link {
         font-size: 1.2rem;
     }
 
@@ -10,110 +12,22 @@
         text-decoration: none;
         color: #000000;
     }
+
     .page-inner .nav > li > a {
         color: #545a5f;
     }
 </style>
 
-{layout name="layouts/layout1" /}
-<section class="scrollable padder-lg padder-v page-inner">
-    <section class="hbox stretch">
-        <aside class="aside-md">
-            <section class="hbox stretch">
-                <section class="m-l-md m-r-md padder-v bg-white r-3x">
-                    <div class="m-sm">
-                        <div class="text-center m-b m-t">
-                            <a href="#" class="thumb-lg">
-                                <img src="__STATIC__/{$curUserInfo.avatar}" class="img-circle">
-                            </a>
-                            <div>
-                                <div class="h3 m-t-xs m-b-xs">{$curUserInfo.name}</div>
-                            </div>
-                        </div>
-                        <nav class="nav-primary">
-                            <ul class="nav clearfix">
-                                <li>
-                                    <a href="index.html">
-                                        <i class="icon-disc icon text-success"></i>
-                                        <span class="text-success">课程表</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="genres.html">
-                                        <i class="icon-music-tone-alt icon text-info"></i>
-                                        <span>评论</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="events.html">
-                                        <i class="icon-drawer icon text-primary-lter"></i>
-                                        <span>问答</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="listen.html">
-                                        <i class="icon-list icon  text-info-dker"></i>
-                                        <span>关注</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="video.html" data-target="#content" data-el="#bjax-el" data-replace="true">
-                                        <i class="icon-social-youtube icon  text-primary"></i>
-                                        <span>个人资料</span>
-                                    </a>
-                                </li>
-                                <li class="m-b hidden-nav-xs"></li>
-                            </ul>
-                        </nav></div>
-                </section>
-            </section>
-        </aside>
-        <section class="vbox">
-            <section class="scrollable padder-v padder-md m-lg bg-white r-3x box-shadow">
-                <div class="m-b-md">
-                    <h3 class="m-b-none">Static Table</h3>
-                </div>
-                <section class="panel panel-default">
-
-                    <div class="table-responsive">
-                        <table class="table table-striped b-t b-light">
-                            <thead>
-                            <tr>
-                                <th class="th-sortable" data-toggle="class">Project</th>
-                                <th>Task</th>
-                                <th>Date</th>
-                                <th style="width:30px;"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>Idrawfast</td>
-                                <td>4c</td>
-                                <td>Jul 25, 2013</td>
-                            </tr>
-                            <tr>
-                                <td>Videodown</td>
-                                <td>4c</td>
-                                <td>Jul 1, 2013</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <footer class="panel-footer">
-                        <div class="row">
-                            <div class="col-sm-4 text-center">
-                                <small class="text-muted inline m-t-sm m-b-sm">showing 20-30 of 50 items</small>
-                            </div>
-                            <div class="col-sm-4 text-right text-center-xs">
-                                <ul class="pagination pagination-sm m-t-none m-b-none">
-                                    <li><a href="#"><i class="fa fa-chevron-left"></i></a></li>
-                                    <li><a href="#">1</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </footer>
-                </section>
-            </section>
-        </section>
-    </section>
+<section>
+    <div class="caption wrapper-lg">
+        <div class="m-b-md">
+            <h3 class="m-b-none">你好，{$curUserInfo.name}</h3>
+        </div>
+        <p>最近登录</p>
+        <div class="post-sum">
+            {volist name='login_time' id='val'}
+                <p>{$val|date='Y-m-d H:i:s',###}</p>
+            {/volist}
+        </div>
+    </div>
 </section>
