--- a/application/admin/view/teacher/add.html
+++ b/application/admin/view/teacher/add.html
@@ -54,7 +54,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">职工号</label>
         <div class="layui-input-block">
-            <input type="text" name="teacher_no" value="{$info['teacher_no']?$info['teacher_no']:''}" autocomplete="off" placeholder="请输入教师名" class="layui-input require">
+            <input type="text" name="teacher_no" value="{$info['teacher_no']?$info['teacher_no']:''}" autocomplete="off" placeholder="请输入职工号" class="layui-input require">
         </div>
     </div>
 
