--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -15,9 +15,9 @@
 <section class="scrollable padder-lg padder-v page-inner">
     <div class="row row-sm">
         {eq name="$list|count" value='0'}
-        <div class="post-item">
+        <div class="">
             <div class="caption wrapper-lg text-center">
-                <h2 class="post-title"><a href="#">暂无任何可访问课程资源</a></h2>
+                <h2 class="post-title"><a href="#">暂无可访问课程资源</a></h2>
             </div>
         </div>
         {/eq}
