--- a/application/index/view/layouts/layout1.html
+++ b/application/index/view/layouts/layout1.html
@@ -46,7 +46,7 @@
         <form class="navbar-form navbar-left input-s-lg m-t m-l-n-xs hidden-xs" role="search">
             <div class="form-group">
                 <div class="input-group">
-                    <input type="text" class="form-control input-sm no-border rounded" placeholder="Search songs, albums...">
+                    <input type="text" class="form-control input-sm no-border rounded" placeholder="搜索...">
                     <span class="input-group-btn">
               <button type="submit" class="btn btn-sm bg-white btn-icon rounded"><i class="fa fa-search"></i></button>
             </span>
