--- a/application/index/view/layouts/studentlayout.html
+++ b/application/index/view/layouts/studentlayout.html
@@ -17,6 +17,10 @@
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
     <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
     <script type="text/javascript" src="__STATIC__/js/layui-xtree.js"></script>
+    <link rel="stylesheet" href="__STATIC__/js/cropper/cropper.css">
+    <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
+    <script type="text/javascript" src="__STATIC__/js/cropper/cropper.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/cropper/croppers.js"></script>
 </head>
 <body class="">
 <section class="vbox">
@@ -171,10 +175,10 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="video.html" data-target="#content" data-el="#bjax-el"
+                                                        <a href="{:url('index/studentProfile')}" data-target="#content" data-el="#bjax-el"
                                                            data-replace="true">
-                                                            <i class=" icon-user icon  "></i>
-                                                            <span>个人资料</span>
+                                                            <i class=" icon-user icon <?php if(request()->path()=='index/studentprofile') echo 'text-success'; ?> "></i>
+                                                            <span class="<?php if(request()->path()=='index/studentprofile') echo 'text-success'; ?>">个人资料</span>
                                                         </a>
                                                     </li>
                                                     <li class="m-b hidden-nav-xs"></li>
@@ -184,8 +188,8 @@
                                     </section>
                                 </section>
                             </aside>
-                            <section class="vbox">
-                                <section class="scrollable padder-v padder-md m-lg bg-white r-3x box-shadow">
+                            <section style="min-height: 100%">
+                                <section class="padder-v padder-md m-lg bg-white r-3x box-shadow" style="min-height: 100%">
                                     {__CONTENT__}
                                 </section>
                             </section>
