--- a/application/index/view/student/comment.html
+++ b/application/index/view/student/comment.html
@@ -25,6 +25,15 @@
     <h3 class="m-b-none text-black">我的评论</h3>
     <small class="text-muted m-b">您的历史评论都在这里了</small>
 </div>
+{eq name="$list|count" value='0'}
+<div class="">
+    <div class="caption wrapper-lg text-center">
+        <h3 class="post-title"><img class="empty-info-png" src="__STATIC__/img/empty.png"></h3>
+        <h3 class="post-title">暂无评论</h3>
+    </div>
+</div>
+{/eq}
+{if condition="count($list) > 0"}
 <section class="panel panel-default">
     <div class="table-responsive">
         <table class="table table-striped b-t b-light">
@@ -67,7 +76,7 @@
         </div>
     </footer>
 </section>
-
+{/if}
 <script>
     $(function () {
         $('.btn-delete').on('click',function () {
