--- a/application/index/view/student/profile.html
+++ b/application/index/view/student/profile.html
@@ -1,27 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>添加课程</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="__STATIC__/admin/css/style.css">
-    <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
-    <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
-    <link rel="stylesheet" href="__STATIC__/js/cropper/cropper.css">
-    <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
-    <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
-    <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
-    <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="__STATIC__/js/layui-xtree.js"></script>
-    <script type="text/javascript" src="__STATIC__/js/cropper/cropper.js"></script>
-    <script type="text/javascript" src="__STATIC__/js/cropper/croppers.js"></script>
-
-</head>
+{layout name="layouts/studentlayout" /}
 <style>
-    body{
-        background: #FFFFFF;
+    .page_items .pagination {
+        display: inline-flex;
     }
+
+    .page_items .pagination .page-item .page-link {
+        font-size: 1.2rem;
+    }
+
+    .page-inner .nav > li > a:hover {
+        text-decoration: none;
+        color: #000000;
+    }
+    .page-inner .table td,th{
+        color: #545a5f;
+        font-weight: normal;
+    }
+
+    .page-inner .nav > li > a {
+        color: #545a5f;
+    }
+
     #myform .layui-form-label{
         /*width: 14%;*/
         width: 100px;
@@ -34,12 +33,12 @@
         margin-right: 0px;
     }
 </style>
-<body>
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>{$info['id']?'编辑':'添加'}学生</legend>
-</fieldset>
+<div class="m-b-md">
+    <h3 class="m-b-none text-black">个人资料</h3>
+</div>
 
-<form class="layui-form" action="" id="myform"  enctype="multipart/form-data" method="POST">
+<form class="layui-form" action="{:url('index/studentProfileSave')}" id="myform"  enctype="multipart/form-data" method="POST">
+    <input type="hidden" value="{$info['id']?$info['id']:''}" name="id">
     <div class="layui-form-item">
         <label class="layui-form-label">学生名</label>
         <div class="layui-input-block">
@@ -51,6 +50,13 @@
         <label class="layui-form-label">学号</label>
         <div class="layui-input-block">
             <input type="text" name="student_no" value="{$info['student_no']?$info['student_no']:''}" autocomplete="off" placeholder="请输入学生号" class="layui-input require">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">密码</label>
+        <div class="layui-input-block">
+            <input type="password" name="password" placeholder="不输入不修改" autocomplete="off" class="layui-input">
         </div>
     </div>
 
@@ -90,6 +96,11 @@
             </div>
         </div>
     </div>
+    <div class="layui-form-item">
+        <div class="layui-input-block text-right">
+            <button type="button" class="layui-btn profile-submit" >提交</button>
+        </div>
+    </div>
 </form>
 
 <script>
@@ -105,7 +116,6 @@
             layer.msg('上传成功');
         }
     });
-    // file_upload_manager.normalUpload('{:url("admin/upload")}',{},'#test1','#demo1','#poster');
     layui.use(['form', 'layedit', 'laydate'], function() {
         var form = layui.form
             , layer = layui.layer
@@ -117,7 +127,23 @@
             ,format:'yyyy-MM-dd'
         });
     });
-</script>
 
-</body>
-</html>
+    $('.profile-submit').on('click',function () {
+        layui.use(['form','layer'], function() {
+            var layer = layui.layer;
+            var params = $('#myform').serialize();
+            var url = $(this).data('href');
+
+            ajax_request.post("{:url('index/studentProfileSave')}",params,function (data) {
+                if(data.is_ok=='ok'){
+                    location.reload();//刷新页面
+                    layer.msg(data.msg,{icon:1});
+                }else{
+                    layer.msg(data.msg,{icon:2});
+                }
+            });
+            return false;
+        });
+        return false;
+    })
+</script>
