--- a/application/index/view/login/login1.html
+++ b/application/index/view/login/login1.html
@@ -29,7 +29,7 @@
           <div class="row w-100">
             <div class="col-lg-5 mx-auto">
               <div class="auth-form-dark text-left p-5">
-                <h2 class="admin-login-title">管理员登陆</h2>
+                <h2 class="admin-login-title">用户登陆</h2>
                 <form class="pt-5">
                   <form id="admin-login-form">
                     <div class="form-group">
